# tako-desktop

./: .gitignore  README.md  package.json
.github/workflows/: release.yml
scripts/: prepare-resources.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: .gitignore
src-tauri/resources/loading/: index.html
src-tauri/src/: bun_manager.rs  bundle_resolver.rs  hub_manager.rs  lib.rs  main.rs  region.rs
